Fixed blog cards to ensure equal height and consistent spacing

--- a/css/style.css
+++ b/css/style.css
@@ -743,18 +743,25 @@ button {
      background-color: #fff;
      margin-bottom: 30px;
      transition: ease-in all 0.5s;
+     height: 100%;
+     display: flex;
+     flex-direction: column;
 }
 
 .blog .blog_box .blog_img {
      overflow: hidden;
+     height: 250px;
 }
 
 .blog .blog_box .blog_img figure {
      margin: 0;
+     height: 100%;
 }
 
 .blog .blog_box .blog_img figure img {
      width: 100%;
+     height: 100%;
+     object-fit: cover;
      transition: all .5s;
 }
 
@@ -765,31 +772,40 @@ button {
 .blog .blog_box .blog_room {
      padding: 33px 30px;
      text-align: left;
+     flex-grow: 1;
+     display: flex;
+     flex-direction: column;
 }
 
 .blog .blog_box .blog_room h3 {
      color: #121212;
      font-size: 25px;
-     line-height: 20px;
+     line-height: 1.2;
      font-weight: 500;
      padding-bottom: 5px;
      transition: ease-in all 0.5s;
-     margin: auto;
+     margin: 0 0 10px 0;
 }
 
 .blog .blog_box .blog_room span {
      font-size: 15px;
      color: #ff0909;
      font-weight: bold;
-     margin-bottom: 10px;
+     margin-bottom: 15px;
      display: block;
 }
 
 .blog .blog_box .blog_room p {
      font-size: 14px;
-     line-height: 20px;
+     line-height: 1.6;
+     margin-bottom: 20px;
+     flex-grow: 1;
 }
 
+.blog .blog_box .blog_room .read_more {
+     margin-top: auto;
+     align-self: flex-start;
+}
 
 /** end blog section **/
 
